operations/manifests/staging/northeurope/monitoring/manifests/alertmanager-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-vs
spec:
  gateways:
    - istio-system/istio-ingressgw
  hosts:
    - alertmanager.staging.eun
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9093
            host: alertmanager-operated.monitoring
